@@ -472,17 +472,7 @@ COMMAND(cmd_emit)
                  && Can_Nspemit(executor) ? PEMIT_SPOOF : 0);
   int speaker = SPOOF(executor, enactor, sw);
 
-  if (SW_ISSET(sw, SWITCH_ROOM)) {
-    notify_format(Owner(executor),
-                  T
-                  ("Deprecated command %s being used on object #%d. Use %s instead."),
-                  "@EMIT/ROOM", executor, "@LEMIT");
-
-    do_lemit(executor, speaker, arg_left,
-             (SW_ISSET(sw, SWITCH_SILENT) ? PEMIT_SILENT : 0) | spflags,
-             queue_entry->pe_info);
-  } else
-    do_emit(executor, speaker, arg_left, spflags, queue_entry->pe_info);
+  do_emit(executor, speaker, arg_left, spflags, queue_entry->pe_info);
 }
 
 COMMAND(cmd_enable)
